# TheoremForge

./: .gitignore  README.md  compose.yaml  config.yaml  main.py  main_v2.py  pyproject.toml  test.py  visualize_traces.py
competition_problem/: lean_1106.jsonl  lean_1107.jsonl  lean_1108.jsonl  lean_1109.jsonl  lean_1110.jsonl  lean_1111.jsonl  lean_1112.jsonl  lean_1113.jsonl  lean_1114.jsonl  lean_1115.jsonl  lean_1116.jsonl  lean_1117.jsonl  lean_1118.jsonl  lean_1119.jsonl  lean_1120.jsonl  lean_1121.jsonl  lean_1122.jsonl  lean_1123.jsonl  lean_1124.jsonl  lean_1125.jsonl  lean_1126.jsonl  lean_1127.jsonl
competition_result/: 1106.jsonl  1107.jsonl  1108.jsonl  1109.jsonl  1110.jsonl  1111.jsonl  1112.jsonl  1113.jsonl  1114.jsonl  1115.jsonl  1116.jsonl  1117.jsonl  1118.jsonl  1119.jsonl  1120.jsonl  1121.jsonl  1122.jsonl  1123.jsonl  1124.jsonl  1125.jsonl  1126.jsonl  1127.jsonl
config/: gemini-3-flash.yaml
scripts/: clear_database.py  extract_data.py  generate_dataset.py  install_vllm.sh  run_experts.py  run_minif2f.py  run_putnam.py  run_search_server.py  run_workflow.py  serve_goedel_prover.sh  upload_const.py  verify.py  vllm_serve_model.sh
theoremforge/: agent_factory.py  async_job_pool.py  async_queue_manager.py  config.py  db.py  manager.py  prompt_manager.py  retriever.py  retry_handler.py  state.py  utils.py
theoremforge/agents/: assembly_correction_agent.py  autoformalization_agent.py  base_agent.py  decomposition_agent.py  definition_retrieval_agent.py  finish_agent.py  finish_agent_process.py  formalization_selection_agent.py  informal_proof_agent.py  proof_assembly_agent.py  proof_correction_agent.py  proof_sketch_agent.py  prover_agent.py  self_correction_agent.py  semantic_check_agent.py  shallow_solve_agent.py  sketch_correction_agent.py  statement_correction_agent.py  statement_normalization_agent.py  statement_refinement_agent.py  subgoal_extraction_agent.py  subgoal_solving_agent.py  theorem_retrieval_agent.py  theorem_retriever_agent.py  verifier_agent.py
theoremforge/lean_server/: client.py  run_server.py  server.py
theoremforge/prompts/: autoformalization.j2  definition_query_generation.j2  (+19 more)
(+5 files in other folders)
