[project]
name = "theoremforge"
version = "0.1.0"
description = "An agentic workflow for formal data synthesis."
readme = "README.md"
requires-python = ">=3.11,<=3.13"
dependencies = [
    "aiohttp>=3.13.1",
    "aiosqlite>=0.20.0",
    "datasets>=4.2.0",
    "flashinfer-python>=0.5.3",
    "flask>=3.1.2",
    "google-genai>=1.56.0",
    "lean-explore>=1.0.0",
    "lean-interact>=0.10.5",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "motor>=3.3.2",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.15.1",
    "rich>=13.0.0",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.50.0",
    "uvicorn>=0.38.0",
    "vllm>=0.11.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
]

[project.scripts]
run_lean_server = "theoremforge.lean_server.run_server:main"
